clientcursormon should acquire locks in a way that cannot throw

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.7.4
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2018-03-26
    • 22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently the background thread will use AutoGetCollectionForReadCommand, which will throw if the operation is interrupted for any reason. This can happen if the server starts its shutdown sequence, in which case all operations are interrupted, including the background thread.

      Specifically, we should use the UninterruptibleLockGuard class to prevent exceptions from being thrown.

      We should probably also move away from that particular db_raii helper, since it will have some side-effects like increasing the Top stats, etc.

            Assignee:
            Charlie Swanson
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: