SERVER-33785 Prevent interrupt in clientcursormon thread